--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,9 @@ body{
 h1{
     text-align: center;
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
