--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,8 @@ h1{
     flex-direction: column;
     align-items: center;
 }
+
+#date-of-birth{
+    margin: 1rem 1rem 2rem;
+    height: 25px;
+}
