--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,33 @@ body{
     font-size: 1.2rem;
 }
 
+.link{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+.list-inline{
+    display: inline;
+    padding:0rem 0.5rem;
+}
+
+footer{
+    background-color: var(--text-color);
+    color: var(--back-ground-color);
+    padding: auto;
+    text-align: center;
+    border-top-right-radius: 1rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+footer .link{
+    color: var(--back-ground-color);
+    font-size: 1.7rem;
+}
+
+footer ul{
+    padding-inline-start: 0px;
+    /*this is to remove the default padding*/
+}
+
